--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -18,6 +18,10 @@
                 padding:0px;
                 margin:0px;
             }
+            [class^="col-"] {
+                padding-left: 4px;
+                padding-right: 4px;
+            }
         </style>
     </head>
     @content
