WIP. Added rate limiting, email, ping.

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -13,11 +13,9 @@
         <link rel="shortcut icon" type="image/png" href="routes.Assets.at("images/favicon.png")">
 
         <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/chosen/1.1.0/chosen.css">
-
         <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
 
-        <link rel="stylesheet" type="text/css" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
+        <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.css" />
         <link rel="stylesheet" type="text/css" href="/assets/stylesheets/leaflet.draw.css" />
         <link rel="stylesheet" type="text/css" href="/assets/stylesheets/leaflet.awesome-markers.css" />
 
