--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,11 +1,13 @@
 @(groups: List[String], center: models.Location)
 @main("MapMailer") {
 <script type="text/javascript" language="javascript" src="//code.jquery.com/jquery.js"></script>
-<script type="text/javascript" language="javascript" src="/assets/javascripts/jquery.clipboard.js"></script>
-<script type="text/javascript" language="javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-<script type="text/javascript" language="javascript" src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.min.js"></script>
-<script type="text/javascript" language="javascript" src="//cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
 <script type="text/javascript" language="javascript" src="/assets/javascripts/purl.js"></script>
+
+<script type="text/javascript" language="javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<script type="text/javascript" language="javascript" src="//cdn.jsdelivr.net/chosen/1.1.0/chosen.jquery.min.js"></script>
+<script type="text/javascript" language="javascript" src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.min.js"></script>
+
+<script type="text/javascript" language="javascript" src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.js"></script>
 <script type="text/javascript" language="javascript" src="/assets/javascripts/leaflet.draw.js"></script>
 <script type="text/javascript" language="javascript" src="/assets/javascripts/leaflet.awesome-markers.js"></script>
 <script type="text/javascript">
@@ -23,6 +25,7 @@
                 });
             }
         });
+    $('.leaflet-control-layers').css('max-height',$(window).height());
 
         Handlebars.registerHelper('join', function(items, block) {
             var delimiter = block.hash.delimiter || ", ",
@@ -138,7 +141,8 @@
                 circle: {
                     shapeOptions: {
                         color: '#2F4F4F'
-                    }
+                    },
+                    metric: false
                 },
                 marker: false
             },
@@ -147,6 +151,10 @@
             }
         });
         map.addControl(drawControl);
+
+        map.on('popupopen', function() {
+            $('#myModal').modal()
+        });
 
         map.on('draw:created', function (e) {
             var type = e.layerType, layer = e.layer;
@@ -158,18 +166,6 @@
                     });
 
                     layer.bindPopup(L.popup(popupOptions).setContent(layerTemplate(data)));
-
-                    $('a.copy').clipboard({
-                        path: '/assets/flashes/jquery.clipboard.swf',
-
-                        copy: function() {
-                            var emailAddresses = "";
-                            $.each (data, function (i, party) {
-                                emailAddresses += party.name;
-                            });
-                            return emailAddresses;
-                        }
-                    });
 
                     drawnItems.addLayer(layer);
                 }, 'json');
@@ -190,8 +186,8 @@
         </div>
         <div class="col-4 text-right">
             <div class="btn-group">
-                <a href="@play.Play.application().configuration().getString("crm.url")/{{ partyId }}" title="Capsule CRM" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-gear fa-lg"></i></a>
-                <a href="mailto:{{ emailAddress }}?bcc=@play.Play.application().configuration().getString("crm.bcc")" title="{{ emailAddress }}" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-envelope-o fa-lg"></i></a>
+                <a href="@play.Play.application().configuration().getString("crm.url")/{{ partyId }}" title="Open in Capsule CRM" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-gear fa-lg"></i></a>
+                <a href="mailto:{{ emailAddress }}?bcc=@play.Play.application().configuration().getString("crm.bcc")" title="Email {{ emailAddress }}" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-envelope-o fa-lg"></i></a>
             </div>
         </div>
     </div>
@@ -204,19 +200,42 @@
         </div>
         <div class="col-5 col-lg-5 text-right">
             <div class="btn-group">
-                <a href="@play.Play.application().configuration().getString("crm.url")/{{ partyId }}" title="Capsule CRM" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-gear fa-lg"></i></a>
-                <a href="mailto:{{ emailAddress }}?bcc=@play.Play.application().configuration().getString("crm.bcc")" title="{{ emailAddress }}" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-envelope-o fa-lg"></i></a>
-                <a href="{{ website }}" target="_blank" title="{{ website }}" class="btn btn-default btn-sm"><i class="fa fa-external-link fa-lg"></i></a>
+                <a href="@play.Play.application().configuration().getString("crm.url")/{{ partyId }}" title="Open in Capsule CRM" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-gear fa-lg"></i></a>
+                <a href="mailto:{{ emailAddress }}?bcc=@play.Play.application().configuration().getString("crm.bcc")" title="Email {{ emailAddress }}" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-envelope-o fa-lg"></i></a>
+                <a href="{{ website }}" target="_blank" title="Open {{ website }}" class="btn btn-default btn-sm"><i class="fa fa-external-link fa-lg"></i></a>
             </div>
         </div>
     </div>
 </script>
 
 <script id="area-popup" type="text/x-handlebars-template">
-    Found {{ this.length }} parties. <a href="#" class="copy"><i class="fa fa-clipboard"></i>test</a> copy organisations
+    Found {{ this.length }} parties. <button class="btn btn-primary" data-toggle="modal"><i class="fa fa-envelope-o"></i></button>
+
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                </div>
+                <div class="modal-body">
+                    <select class="chosen-select form-control" data-placeholder="Select categories to email..." name="categories" style="width:350px;" multiple>
+                        <option value=""></option>
+                        {{#each this}}
+                        <option>{{this.name}}</option>
+                        {{/each}}
+                    </select>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </script>
 
 <body onLoad="javascript:init();">
-<div id="map"></div>
+    <div id="map"></div>
 </body>
 }
